--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ anyhow = "1.0.86"
 log = "0.4.17"
 env_logger = "0.11.3"
 clap = { version = "4.0", features = ["derive"] }
+serde = { version = "1.0.208", features = ["derive"] }
+serde_json = "1.0.125"
+icalendar = "0.16.3"
+chinese-lunisolar-calendar = "0.2.0"
+chrono = "0.4.38"
