--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,7 @@ serde_json = "1.0.125"
 icalendar = "0.16.3"
 chinese-lunisolar-calendar = "0.2.0"
 chrono = "0.4.38"
+
+[dependencies.openssl-sys]
+version = "0.9.91"
+features = ["vendored"]
